# sapphire

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.json  biome.jsonc  cosmos.config.json  cosmos.imports.d.ts  cosmos.imports.ts  docker-compose.yml  drizzle.config.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vitest.config.ts  wdio.conf.ts
coverage/: index.html  (+1 more)
src-tauri/: Cargo.toml  sapphire.db  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_player_note_schema.sql  002_add_performance_indexes.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: categories.rs  categories_test.rs  memos.rs  mod.rs  notes.rs  notes_test.rs  player_summaries.rs  player_summaries_test.rs  player_tags.rs  player_tags_test.rs  players.rs  players_test.rs  summary_templates.rs  summary_templates_test.rs  tags.rs  tags_test.rs
src-tauri/src/commands/playernote/: commands.rs  database.rs  error.rs  logging.rs  logging_simple.rs  migration.rs  mod.rs  schema.rs  types.rs
src-tauri/src/commands/playernote/migrations/: 001_create_player_note_tables.sql  (+5 more)
src-tauri/src/database/: connection.rs  integration_tests.rs  migration.rs  mod.rs  models.rs  player_note_schema.sql  schema.rs  seed.rs
src-tauri/src/services/: memo_service.rs  mod.rs  player_service.rs  tag_service.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs
src-tauri/tests/: database_test.rs  migration_test.rs  player_crud_api_test.rs
(+878 files in other folders)
